(library
 (name mongoc)
 (public_name ocaml-mongoc.mongoc)
 (ctypes
  (external_library_name libmongoc-1.0)
  (build_flags_resolver pkg_config)
  (headers
   (include "mongoc/mongoc.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C))
 (libraries bson))
